k8s_base/overlays/laptop/website/k_leasing_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leasing-web
spec:
  hosts:
  - leasing.z01.yantao0527.me
---
