k8s_base/overlays/laptop/website/k_website_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website
spec:
  hosts:
  - "z01.yantao0527.me"
---
